--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@react-three/drei": "^9.121.4",
     "@react-three/fiber": "^8.17.12",
     "@react-three/rapier": "^1.5.0",
@@ -19,8 +23,9 @@
     "lenis": "^1.1.20",
     "lucide-react": "^0.474.0",
     "meshline": "^3.3.1",
-    "motion": "^12.0.6",
+    "motion": "^12.4.1",
     "next": "15.1.6",
+    "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sass": "^1.83.4",
