--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "sass": "^1.83.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.172.0"
+    "three": "^0.173.0"
+  },
+  "overrides": {
+    "three-mesh-bvh": "^0.8.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
