--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "motion": "^12.4.1",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
+    "ogl": "^1.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sass": "^1.83.4",
+    "sass": "^1.85.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.173.0"
