--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
@@ -21,13 +22,12 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.7",
     "gsap": "^3.12.7",
-    "lenis": "^1.1.20",
+    "lenis": "^1.2.3",
     "lucide-react": "^0.474.0",
     "meshline": "^3.3.1",
     "motion": "^12.4.1",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
-    "ogl": "^1.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sass": "^1.85.1",
