--- a/package.json
+++ b/package.json
@@ -15,25 +15,19 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@react-spring/web": "^9.7.5",
-    "@react-three/drei": "^9.121.4",
-    "@react-three/fiber": "^8.17.12",
-    "@react-three/rapier": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.7",
     "gsap": "^3.12.7",
     "lenis": "^1.2.3",
     "lucide-react": "^0.474.0",
-    "meshline": "^3.3.1",
-    "motion": "^12.4.1",
+    "motion": "^12.5.0",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sass": "^1.85.1",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
-    "three": "^0.173.0"
+    "tailwindcss-animate": "^1.0.7"
   },
   "overrides": {
     "three-mesh-bvh": "^0.8.0"
