--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lucide-react": "^0.474.0",
     "motion": "^12.5.0",
     "next": "15.1.6",
-    "next-themes": "^0.4.4",
+    "next-seo": "^6.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.6.0",
