--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "lenis": "^1.2.3",
     "lucide-react": "^0.474.0",
     "motion": "^12.5.0",
-    "next": "15.1.6",
+    "next": "^15.2.3",
     "next-seo": "^6.6.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -36,7 +36,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "eslint": "^9",
-    "eslint-config-next": "15.1.6",
+    "eslint-config-next": "^15.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
